--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 </audio>
 
 <div class="card">
-  <h1>Hey Chickadee 🐥💚</h1>
+  <h1>Hi Ms Chickadee 🐥💚</h1>
 
   <p>
-    From laughs to quiet moments,<br>
-    nothing even matters without you.
-  </p>
+  “I am my beloved’s, and my beloved is mine.”<br>
+  <em>Song of Solomon 2:16</em>
+</p>
 
   <p style="font-size:16px; color:#555;">
     one of my favorite moments with you
