--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
   <h1>Hi Ms Chickadee 🐥💚</h1>
 
   <p>
-  “I am my beloved’s, and my beloved is mine.”<br>
+Being around you there is always a verse that comes to mind
+    “I am my beloved’s, and my beloved is mine.”<br>
   <em>Song of Solomon 2:16</em>
 </p>
 
