--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>For Chickadee 💚</title>
+  <title>For Chickadee</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -12,30 +12,34 @@
 </audio>
 
 <div class="card">
-  <h1>Hi Ms Chickadee 🐥💚</h1>
+  <h1>Chickadee</h1>
 
   <p>
-Being around you there is always a verse that comes to mind
+    Being around you, there is always a verse that comes to mind.
+  </p>
 
-    
-    “I am my beloved’s, and my beloved is mine.”<br>
-  <em>Song of Solomon 2:16</em>
-</p>
-
-  <p style="font-size:16px; color:#555;">
-    
+  <p>
+    “I am my beloved’s, and my beloved is mine.”
+    <br>
+    <em>Song of Solomon 2:16</em>
   </p>
 
   <div class="photo-frame">
     <img src="photo.jpg" alt="Us">
-    <span class="caption">me & you 💚</span>
+    <span class="caption">me & you</span>
   </div>
 
-  <p><strong>Will you be my Valentine?</strong></p>
+  <p style="font-size:16px; color:#444; margin-top:15px;">
+    From laughter to stillness, nothing truly matters without you.
+  </p>
+
+  <p style="margin-top:20px;">
+    <strong>Will you be my Valentine?</strong>
+  </p>
 
   <div class="buttons">
-    <button id="yesBtn">YES 💕</button>
-    <button id="noBtn">NO 😅</button>
+    <button id="yesBtn">Yes</button>
+    <button id="noBtn">No</button>
   </div>
 
   <p id="message"></p>
