--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
 </audio>
 
 <div class="card">
-  <h1>Chickadee</h1>
+  <h1>Hi Ms Chickadee</h1>
 
   <p>
     Being around you, there is always a verse that comes to mind.
+    ___________________________
   </p>
 
   <p>
