--- a/index.html
+++ b/index.html
@@ -2,49 +2,174 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>For Chickadee</title>
-<link rel="stylesheet" href="style.css">
+
+<style>
+  body {
+    margin: 0;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #f5f7f4;
+    font-family: "Helvetica Neue", Arial, sans-serif;
+  }
+
+  .card {
+    background: white;
+    padding: 40px 50px;
+    border-radius: 16px;
+    box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+    text-align: center;
+    position: relative;
+    max-width: 420px;
+  }
+
+  h1 {
+    font-weight: 500;
+    margin-bottom: 15px;
+    color: #333;
+  }
+
+  p {
+    color: #555;
+    line-height: 1.6;
+    font-size: 16px;
+  }
+
+  .photo-frame {
+    margin: 20px 0;
+  }
+
+  .photo-frame img {
+    width: 100%;
+    border-radius: 14px;
+  }
+
+  .caption {
+    display: block;
+    margin-top: 6px;
+    font-size: 14px;
+    color: #777;
+  }
+
+  .buttons {
+    position: relative;
+    margin-top: 20px;
+    transition: opacity 1s ease;
+  }
+
+  button {
+    padding: 12px 28px;
+    font-size: 16px;
+    border-radius: 999px;
+    border: none;
+    cursor: pointer;
+  }
+
+  #yesBtn {
+    background: #8fbf9f;
+    color: white;
+    margin-right: 20px;
+  }
+
+  #noBtn {
+    background: #e6e6e6;
+    color: #444;
+    position: absolute;
+  }
+
+  #message {
+    opacity: 0;
+    transition: opacity 2s ease;
+    margin-top: 25px;
+    font-size: 18px;
+    color: #444;
+    line-height: 1.6;
+    text-align: center;
+  }
+</style>
 </head>
+
 <body>
 
 <audio id="bgMusic" loop>
-<source src="song.mp3" type="audio/mpeg">
+  <source src="song.mp3" type="audio/mpeg">
 </audio>
 
 <div class="card">
-<h1>Chickadee</h1>
+  <h1>Chickadee</h1>
 
-<p>
-Being around you, there is always a verse that comes to mind.
-</p>
+  <p>
+    Being around you, there is always a verse that comes to mind.
+  </p>
 
-<p>
-“I am my beloved’s, and my beloved is mine.”
-<br>
-<em>Song of Solomon 2:16</em>
-</p>
+  <p>
+    “I am my beloved’s, and my beloved is mine.”
+    <br>
+    <em>Song of Solomon 2:16</em>
+  </p>
 
-<div class="photo-frame">
-<img src="photo.jpg" alt="Us">
-<span class="caption">me & you</span>
+  <div class="photo-frame">
+    <img src="photo.jpg" alt="Us">
+    <span class="caption">me & you</span>
+  </div>
+
+  <p style="font-size:16px; color:#444; margin-top:15px;">
+    From laughter to stillness, nothing truly matters without you.
+  </p>
+
+  <p style="margin-top:20px;">
+    <strong>Will you be my Valentine?</strong>
+  </p>
+
+  <div class="buttons">
+    <button id="yesBtn">Yes</button>
+    <button id="noBtn">No</button>
+  </div>
+
+  <p id="message"></p>
 </div>
 
-<p style="font-size:16px; color:#444; margin-top:15px;">
-From laughter to stillness, nothing truly matters without you.
-</p>
+<script>
+  const noBtn = document.getElementById("noBtn");
+  const yesBtn = document.getElementById("yesBtn");
+  const message = document.getElementById("message");
+  const music = document.getElementById("bgMusic");
+  const buttons = document.querySelector(".buttons");
 
-<p style="margin-top:20px;">
-<strong>Will you be my Valentine?</strong>
-</p>
+  // NO button runs away
+  noBtn.addEventListener("mouseenter", moveNo);
+  noBtn.addEventListener("touchstart", moveNo);
 
-<div class="buttons">
-<button id="yesBtn">Yes</button>
-<button id="noBtn">No</button>
-</div>
+  function moveNo() {
+    const maxX = window.innerWidth - noBtn.offsetWidth;
+    const maxY = window.innerHeight - noBtn.offsetHeight;
 
-<p id="message"></p>
-</div>
+    noBtn.style.left = Math.random() * maxX + "px";
+    noBtn.style.top = Math.random() * maxY + "px";
+  }
 
-<script src="script.js"></script>
+  // YES button cinematic moment
+  yesBtn.addEventListener("click", () => {
+    buttons.style.opacity = "0";
+
+    if (music) {
+      music.volume = 0.5;
+      music.play().catch(() => {});
+    }
+
+    setTimeout(() => {
+      message.innerHTML = `
+        hehe thanksha 💕<br>
+        Mwuahhh <br>
+        my Chickadee — always n foreva.
+      `;
+      message.style.opacity = "1";
+    }, 1000);
+  });
+</script>
+
 </body>
 </html>
